--- a/Rupesh HomeKit/Rupesh HomeKit/Supporting Files/InfoPlist/Info.plist
+++ b/Rupesh HomeKit/Rupesh HomeKit/Supporting Files/InfoPlist/Info.plist
@@ -15,17 +15,17 @@
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSHomeKitUsageDescription</key>
+	<string>The app uses Home Kit to configure accessories from Devices.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string></string>
-	<key>NSHomeKitUsageDescription</key>
-	<string>The app uses Home Kit to configure accessories from Devices.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
